adicionando as imagens

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </br>
 
                 <ul class="brands-list">
-                    <li><img src="images/html.png" alt="HTML"></li>
-                    <li><img src="images/css.png" alt="CSS"></li>
-                    <li><img src="images/js.webp" alt="JS"></li>
+                    <li><img src="imagens/html.png" alt="HTML"></li>
+                    <li><img src="imagens/css.png" alt="CSS"></li>
+                    <li><img src="imagens/js.webp" alt="JS"></li>
                 </ul>
             </div>
         </div>
@@ -75,17 +75,17 @@
                     <ul class="social-links">
                         <li>
                             <a href="#" title="Siga-me">
-                                <img src="images/instagram.png" alt="Logo do Instagram">
+                                <img src="imagens/instagram.png" alt="Logo do Instagram">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Siga-me">
-                                <img src="images/facebook.png" alt="Logo do Facebook">
+                                <img src="imagens/facebook.png" alt="Logo do Facebook">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Meus Conteúdos">
-                                <img src="images/youtube.png" alt="Logo do YouTube">
+                                <img src="imagens/youtube.png" alt="Logo do YouTube">
                             </a>
                         </li>
                     </ul>
