adicionando minha foto

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-front" src="images/perfil.jpg" alt="Fachada da Loja Games Shop">
+            <img class="store-front" src="imagens/perfil.jpg" alt="Fachada da Loja Games Shop">
             <div>
                 <h2>Sobre Mim</h2>
                 <p>
